unpackaged/main/default/objects/Opportunity/fields/Ex_Close_Date_Ex_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Ex_Close_Date_Ex_Close_Date__c</fullName>
    <formula>IF(Show_Close_Date__c = Occurrence_Close_Date__c,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ex Close Date. = Ex Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>