unpackaged/main/default/objects/Opportunity/fields/Execution_Office__c.field-meta.xml
<CustomField>
    <fullName>Execution_Office__c</fullName>
    <label>Execution Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ON - Atlanta</fullName>
            </value>
            <value>
                <fullName>ON - Dallas</fullName>
            </value>
            <value>
                <fullName>ON - Greensboro</fullName>
            </value>
            <value>
                <fullName>ON - Houston</fullName>
            </value>
            <value>
                <fullName>ON - Memphis</fullName>
            </value>
            <value>
                <fullName>ON - Nashville</fullName>
            </value>
            <value>
                <fullName>ON - Orlando</fullName>
            </value>
            <value>
                <fullName>ON - Phoenix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>