unpackaged/main/default/objects/Opportunity/fields/Exhibit_Hall_Hours_Day_3__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Hall_Hours_Day_3__c</fullName>
    <inlineHelpText>Show Hours Day 3.</inlineHelpText>
    <label>Exhibit Hall Hours Day 3</label>
    <length>25</length>
    <type>Text</type>
</CustomField>