unpackaged/main/default/objects/Opportunity/fields/Exhibition_Cancelled_CV__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Cancelled_CV__c</fullName>
    <formula>Show_Occurrence__r.Show_Cancelled_Due_to_Coronavirus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this box is checked, the Exhibition Opportunity has been cancelled due to Coronavirus.</inlineHelpText>
    <label>Exhibition Cancelled CV</label>
    <type>Checkbox</type>
</CustomField>