unpackaged/main/default/objects/Opportunity/fields/Exhibition_Opportunity_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Opportunity_Account_Name__c</fullName>
    <formula>Show_Occurrence__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition Opportunity Account Name</label>
    <type>Text</type>
</CustomField>