unpackaged/main/default/objects/Opportunity/fields/Exhibition_Opportunity_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Opportunity_Job_Number__c</fullName>
    <formula>Show_Occurrence__r.Job_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition Opportunity Job Number</label>
    <type>Text</type>
</CustomField>