unpackaged/main/default/objects/Opportunity/fields/Exhibition_Owner__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Owner__c</fullName>
    <formula>Show_Occurrence__r.Owner.FirstName +&quot; &quot;+ Show_Occurrence__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition Owner</label>
    <type>Text</type>
</CustomField>