unpackaged/main/default/objects/Opportunity/fields/Exhibition_Postponed_w_out_dates__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Postponed_w_out_dates__c</fullName>
    <formula>Show_Occurrence__r.Postponed_without_confirmed_dates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this box is checked, the Exhibition Opportunity has been postponed without confirmed dates due to Coronavirus.</inlineHelpText>
    <label>Exhibition Postponed w/out dates</label>
    <type>Checkbox</type>
</CustomField>