unpackaged/main/default/objects/Opportunity/fields/Exhibition_Probability__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Probability__c</fullName>
    <formula>Show_Occurrence__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>