unpackaged/main/default/objects/Opportunity/fields/Exhibition_Stage__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Stage__c</fullName>
    <formula>TEXT(Show_Occurrence__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition Stage</label>
    <type>Text</type>
</CustomField>