unpackaged/main/default/objects/Opportunity/fields/Exhibition_Type__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Type__c</fullName>
    <label>Exhibition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 2</fullName>
                <default>true</default>
                <label>Tier 2</label>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>