unpackaged/main/default/objects/Opportunity/fields/Exhibitor_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Move_In_Date__c</fullName>
    <inlineHelpText>Date when exhibitors will start move in</inlineHelpText>
    <label>Exhibitor Move-In Date</label>
    <type>Date</type>
</CustomField>