unpackaged/main/default/objects/Opportunity/fields/Exhibitor_Satisfaction_Score_GES_SAT__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Satisfaction_Score_GES_SAT__c</fullName>
    <inlineHelpText>Manually input from sales once survey results reviewed</inlineHelpText>
    <label>Exhibitor Satisfaction Score (GES SAT)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>