unpackaged/main/default/objects/Opportunity/fields/Expected_Signed_Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Signed_Proposal_Date__c</fullName>
    <inlineHelpText>Estimated Close Date</inlineHelpText>
    <label>Expected Signed Proposal Date</label>
    <type>Date</type>
</CustomField>