unpackaged/main/default/objects/Opportunity/fields/Expo_Management_Software_Company__c.field-meta.xml
<CustomField>
    <fullName>Expo_Management_Software_Company__c</fullName>
    <inlineHelpText>Company providing ERP services to exhibition organizer</inlineHelpText>
    <label>Expo Management Software Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A2Z</fullName>
            </value>
            <value>
                <fullName>Cadmium</fullName>
            </value>
            <value>
                <fullName>eShow</fullName>
            </value>
            <value>
                <fullName>ExpoCad</fullName>
            </value>
            <value>
                <fullName>GoExpo</fullName>
            </value>
            <value>
                <fullName>Map Your Show</fullName>
            </value>
            <value>
                <fullName>Ungerboeck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>