unpackaged/main/default/objects/Opportunity/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Venue in which exhibition takes place</inlineHelpText>
    <label>Facility</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Facility type account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Show Occurrences (Private)</relationshipLabel>
    <relationshipName>R00N40000001pjqSEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>