unpackaged/main/default/objects/Opportunity/fields/Facility_City__c.field-meta.xml
<CustomField>
    <fullName>Facility_City__c</fullName>
    <formula>IF(   ISBLANK( Show_Occurrence__c )  , occurrence_city__c, Show_Occurrence__r.occurrence_city__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility City</label>
    <type>Text</type>
</CustomField>