unpackaged/main/default/objects/Opportunity/fields/Floorplan_Link__c.field-meta.xml
<CustomField>
    <fullName>Floorplan_Link__c</fullName>
    <defaultValue>&quot;https://floorplans.ges.com&quot;</defaultValue>
    <inlineHelpText>For login details please contact floorplanprintsuk@ges.com</inlineHelpText>
    <label>Floorplan Link</label>
    <type>Url</type>
</CustomField>