unpackaged/main/default/objects/Opportunity/fields/Forecast_amount2__c.field-meta.xml
<CustomField>
    <fullName>Forecast_amount2__c</fullName>
    <label>Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>