unpackaged/main/default/objects/Opportunity/fields/Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount__c</fullName>
    <formula>IF( 
AND( 
ISPICKVAL(StageName ,&quot;Forecast&quot;), 
RecordTypeId = &quot;01240000000198o&quot;), 
Amount , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>