unpackaged/main/default/objects/Opportunity/fields/Forecast_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Expected_Revenue__c</fullName>
    <description>Forecast_Sales_Price__c  *  Probability  / 100</description>
    <formula>Forecast_Sales_Price__c  *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecast_Sales_Price__c  *  Probability  / 100</inlineHelpText>
    <label>Forecast Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>