unpackaged/main/default/objects/Opportunity/fields/Forecast_Lost_Amt__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Lost_Amt__c</fullName>
    <description>Forecast Lost Amt</description>
    <formula>IF( Lost__c =1, Forecast_Sales_Price__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecast Lost Amt</inlineHelpText>
    <label>Forecast Lost Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>