unpackaged/main/default/objects/Opportunity/fields/Forecast_Open_Amt__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Open_Amt__c</fullName>
    <description>Forecast Amt if Open</description>
    <formula>IF(AND(Won__c =0, Lost__c =0,NOT(ISPICKVAL(StageName ,&quot;Sales Goal&quot;))), Forecast_Sales_Price__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecast Amt if Open</inlineHelpText>
    <label>Forecast Open Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>