unpackaged/main/default/objects/Opportunity/fields/Forecast_Sales_Margin_c__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Sales_Margin_c__c</fullName>
    <description>Estimated profit value</description>
    <inlineHelpText>Estimated profit value</inlineHelpText>
    <label>Forecast Sales Margin</label>
    <summarizedField>OpportunityLineItem.Product_Forecast_Sales_Margin__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>