unpackaged/main/default/objects/Opportunity/fields/Foreign_Production_Location__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Production_Location__c</fullName>
    <label>Foreign Production Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>GES - ASIA</fullName>
            </value>
            <value>
                <fullName>GES - Blitz</fullName>
            </value>
            <value>
                <fullName>GES - Coventry</fullName>
            </value>
            <value>
                <fullName>GES - Dubai</fullName>
            </value>
            <value>
                <fullName>GES - EUROPE</fullName>
            </value>
            <value>
                <fullName>GES – Poland</fullName>
            </value>
            <value>
                <fullName>GES - USA</fullName>
            </value>
            <value>
                <fullName>GES - Velbert</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SUB - ASIA + ROW</fullName>
            </value>
            <value>
                <fullName>SUB - Europe</fullName>
            </value>
            <value>
                <fullName>SUB - UAE</fullName>
            </value>
            <value>
                <fullName>SUB - UK</fullName>
            </value>
            <value>
                <fullName>SUB - USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>