unpackaged/main/default/objects/Opportunity/fields/Freight_Weight_CWT__c.field-meta.xml
<CustomField>
    <fullName>Freight_Weight_CWT__c</fullName>
    <inlineHelpText>Estimated Freight Weight of the Show.</inlineHelpText>
    <label>Estimated Freight Weight (CWT)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>