unpackaged/main/default/objects/Opportunity/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Frequency of Show Occurrence</description>
    <inlineHelpText>B1-B5: Base business (exhibition occurs same city/venue every occurrence), either annually (1), every other year (2), etc.; R1-R5: Rotating business (exhibition occurs different city/venue each occurrence), either annually (1), every other year (2), etc.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
            <value>
                <fullName>B5</fullName>
            </value>
            <value>
                <fullName>R1</fullName>
            </value>
            <value>
                <fullName>R2</fullName>
            </value>
            <value>
                <fullName>R3</fullName>
            </value>
            <value>
                <fullName>R4</fullName>
            </value>
            <value>
                <fullName>R5</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>