unpackaged/main/default/objects/Opportunity/fields/Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Stage__c</fullName>
    <label>Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAL</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>WIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>