unpackaged/main/default/objects/Opportunity/fields/GBMS_ID__c.field-meta.xml
<CustomField>
    <fullName>GBMS_ID__c</fullName>
    <label>Merged GBMS ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>