unpackaged/main/default/objects/Opportunity/fields/GBMS_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>GBMS_Project_ID__c</fullName>
    <externalId>true</externalId>
    <label>GBMS Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>