unpackaged/main/default/objects/Opportunity/fields/GBMSProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>GBMSProjectStatus__c</fullName>
    <label>GBMS Project Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>