unpackaged/main/default/objects/Opportunity/fields/GeneralContractorBillingCity__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractorBillingCity__c</fullName>
    <label>GeneralContractorBillingCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>