unpackaged/main/default/objects/Opportunity/fields/GeneralContractorBillingCountry__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractorBillingCountry__c</fullName>
    <label>GeneralContractorBillingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>