unpackaged/main/default/objects/Opportunity/fields/GeneralContractorBillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractorBillingPostalCode__c</fullName>
    <label>GeneralContractorBillingPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>