unpackaged/main/default/objects/Opportunity/fields/GeneralContractorBillingState__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractorBillingState__c</fullName>
    <label>GeneralContractorBillingState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>