unpackaged/main/default/objects/Opportunity/fields/GeneralContractorBillingStreet__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractorBillingStreet__c</fullName>
    <label>GeneralContractorBillingStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>