unpackaged/main/default/objects/Opportunity/fields/GeneralContractorFax__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractorFax__c</fullName>
    <label>GeneralContractorFax</label>
    <type>Phone</type>
</CustomField>