unpackaged/main/default/objects/Opportunity/fields/GeneralContractorName__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractorName__c</fullName>
    <label>GeneralContractorName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>