unpackaged/main/default/objects/Opportunity/fields/GeneralContractorPhone__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractorPhone__c</fullName>
    <label>GeneralContractorPhone</label>
    <type>Phone</type>
</CustomField>