unpackaged/main/default/objects/Opportunity/fields/GES_Designer_1__c.field-meta.xml
<CustomField>
    <fullName>GES_Designer_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GES Designer 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>0014000000LBgie</value>
        </filterItems>
        <filterItems>
            <field>Contact.Title</field>
            <operation>contains</operation>
            <value>Designer, Detailer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (GES Designer 1)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>