unpackaged/main/default/objects/Opportunity/fields/GES_Move_In_Date_1_Hours__c.field-meta.xml
<CustomField>
    <fullName>GES_Move_In_Date_1_Hours__c</fullName>
    <inlineHelpText>GES Move-in Day 1 Hours.</inlineHelpText>
    <label>GES Move-In Date 1 Hours</label>
    <length>25</length>
    <type>Text</type>
</CustomField>