unpackaged/main/default/objects/Opportunity/fields/GES_Move_In_Date_2__c.field-meta.xml
<CustomField>
    <fullName>GES_Move_In_Date_2__c</fullName>
    <inlineHelpText>GES Move-in Day 2.</inlineHelpText>
    <label>GES Move-In Date 2</label>
    <type>Date</type>
</CustomField>