unpackaged/main/default/objects/Opportunity/fields/GES_Move_In_Date_2_Hours__c.field-meta.xml
<CustomField>
    <fullName>GES_Move_In_Date_2_Hours__c</fullName>
    <inlineHelpText>GES Move-In Day 2 Hours.</inlineHelpText>
    <label>GES Move-In Date 2 Hours</label>
    <length>25</length>
    <type>Text</type>
</CustomField>