unpackaged/main/default/objects/Opportunity/fields/GES_Move_Out_Date_1__c.field-meta.xml
<CustomField>
    <fullName>GES_Move_Out_Date_1__c</fullName>
    <inlineHelpText>GES Move-Out Day 1.</inlineHelpText>
    <label>GES Move-Out Date 1</label>
    <type>Date</type>
</CustomField>