unpackaged/main/default/objects/Opportunity/fields/GES_Move_Out_Date_2_Hours__c.field-meta.xml
<CustomField>
    <fullName>GES_Move_Out_Date_2_Hours__c</fullName>
    <inlineHelpText>GES Move-Out Day 2 Hours.</inlineHelpText>
    <label>GES Move-Out Date 2 Hours</label>
    <length>25</length>
    <type>Text</type>
</CustomField>