unpackaged/main/default/objects/Opportunity/fields/GES_Referral_to_OnServices__c.field-meta.xml
<CustomField>
    <fullName>GES_Referral_to_OnServices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Audited - KEEP per SR 9/24/2019</description>
    <inlineHelpText>For cross-selling commission tracking</inlineHelpText>
    <label>GES Referral to OnServices</label>
    <type>Checkbox</type>
</CustomField>