unpackaged/main/default/objects/Opportunity/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <inlineHelpText>For Housing: Revenue after money is given back to the client</inlineHelpText>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>