unpackaged/main/default/objects/Opportunity/fields/h_85_Negotiation_and_Review__c.field-meta.xml
<CustomField>
    <fullName>h_85_Negotiation_and_Review__c</fullName>
    <description>Date Opportunity moved to 85% - Negotiation and Review.</description>
    <label>85% - Negotiation and Review</label>
    <type>Date</type>
</CustomField>