unpackaged/main/default/objects/Opportunity/fields/Holidays__c.field-meta.xml
<CustomField>
    <fullName>Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if a Holiday occurs during the GES Move-in, Exhibitor Move-in, Show Days, Exhibitor Move-Out, GES Move-out.</inlineHelpText>
    <label>Holidays</label>
    <type>Checkbox</type>
</CustomField>