unpackaged/main/default/objects/Opportunity/fields/Hotel_Map_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Map_Amount__c</fullName>
    <inlineHelpText>Fill in this Amount if your Alternative Accommodation type is Hotel Map</inlineHelpText>
    <label>Hotel Map Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>