unpackaged/main/default/objects/Opportunity/fields/Housing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Housing_Notes__c</fullName>
    <label>Housing - Notes</label>
    <type>TextArea</type>
</CustomField>