unpackaged/main/default/objects/Opportunity/fields/Housing_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Housing_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Housing Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Housing Opportunity)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>