unpackaged/main/default/objects/Opportunity/fields/Housing_Provider__c.field-meta.xml
<CustomField>
    <fullName>Housing_Provider__c</fullName>
    <inlineHelpText>Company providing Housing services for this exhibition opportunity</inlineHelpText>
    <label>Housing Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A111 Power of Conference Service</fullName>
            </value>
            <value>
                <fullName>AC Central Reservations</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Anthony Travel &amp; airbnb</fullName>
            </value>
            <value>
                <fullName>aRes Travel</fullName>
            </value>
            <value>
                <fullName>b-network</fullName>
            </value>
            <value>
                <fullName>CMR – Convention Management Resources</fullName>
            </value>
            <value>
                <fullName>Conference Direct</fullName>
            </value>
            <value>
                <fullName>Connections Housing</fullName>
            </value>
            <value>
                <fullName>Convention Housing Management (CHMrooms)</fullName>
            </value>
            <value>
                <fullName>Convention Housing Partners</fullName>
            </value>
            <value>
                <fullName>CVB</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>Davis_Trapp</fullName>
                <label>Davis Trapp</label>
            </value>
            <value>
                <fullName>De Prez</fullName>
            </value>
            <value>
                <fullName>Events in Focus</fullName>
            </value>
            <value>
                <fullName>Eventsphere</fullName>
            </value>
            <value>
                <fullName>Expovision</fullName>
            </value>
            <value>
                <fullName>Express Travel</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Fusion Marketing</fullName>
            </value>
            <value>
                <fullName>Globetrotter Travel Management Services</fullName>
            </value>
            <value>
                <fullName>Helms Brisco</fullName>
            </value>
            <value>
                <fullName>Hotel Direct</fullName>
            </value>
            <value>
                <fullName>Housing Connections</fullName>
            </value>
            <value>
                <fullName>ICS</fullName>
            </value>
            <value>
                <fullName>IMN</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>InSITE Selection Services</fullName>
            </value>
            <value>
                <fullName>J. Spargo &amp; Associates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>