unpackaged/main/default/objects/Opportunity/fields/If_Other_please_describe__c.field-meta.xml
<CustomField>
    <fullName>If_Other_please_describe__c</fullName>
    <description>For the lead source field when &quot;Other&quot; is used.</description>
    <label>If Other, please name:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>