unpackaged/main/default/objects/Opportunity/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <inlineHelpText>Please enter the invoice numbers, if more than one, please enter one on each line</inlineHelpText>
    <label>Invoice No</label>
    <type>TextArea</type>
</CustomField>