unpackaged/main/default/objects/Opportunity/fields/Invoice_Paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the invoice has been paid, EMEA D&amp;B Opportunity</description>
    <inlineHelpText>Please check if the invoice has been paid</inlineHelpText>
    <label>Invoice Paid</label>
    <type>Checkbox</type>
</CustomField>