unpackaged/main/default/objects/Opportunity/fields/Is_Account_Manager_Populated__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Manager_Populated__c</fullName>
    <formula>if(isblank(Account_Manager__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check Field for Account Manager Completed.</inlineHelpText>
    <label>Is Account Manager Populated?</label>
    <type>Text</type>
</CustomField>