unpackaged/main/default/objects/Opportunity/fields/Is_Amount_populated__c.field-meta.xml
<CustomField>
    <fullName>Is_Amount_populated__c</fullName>
    <formula>IF(OR(ISBLANK(Amount),Amount=0),&quot;No&quot;,&quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Amount populated?</label>
    <type>Text</type>
</CustomField>