unpackaged/main/default/objects/Opportunity/fields/Is_EAC_Deadline_Populated__c.field-meta.xml
<CustomField>
    <fullName>Is_EAC_Deadline_Populated__c</fullName>
    <formula>if(isblank(EAC_Deadline__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check Field for Exhibitor Appointed Contractor Deadline Completed.</inlineHelpText>
    <label>Is EAC Deadline Populated?</label>
    <type>Text</type>
</CustomField>