unpackaged/main/default/objects/Opportunity/fields/Is_Early_Order_Deadline_Populated__c.field-meta.xml
<CustomField>
    <fullName>Is_Early_Order_Deadline_Populated__c</fullName>
    <formula>if(isblank(Early_Order_Deadline__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check Field for Advance Order Deadline Completed.</inlineHelpText>
    <label>Is Early Order Deadline Populated?</label>
    <type>Text</type>
</CustomField>