unpackaged/main/default/objects/Opportunity/fields/Is_GES_Move_In_Date_1_Populated__c.field-meta.xml
<CustomField>
    <fullName>Is_GES_Move_In_Date_1_Populated__c</fullName>
    <formula>if(isblank(GES_Move_In__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is GES Move-In Date 1 Populated?</label>
    <type>Text</type>
</CustomField>