unpackaged/main/default/objects/Opportunity/fields/Is_Non_Show__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Show__c</fullName>
    <formula>IF(OR(ISNULL(Show_Occurrence__c),ISBLANK(Show_Occurrence__c)),IF(OR(ISNULL(Non_Show__c),ISBLANK(Non_Show__c)),0,1),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Non-Show</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>