unpackaged/main/default/objects/Opportunity/fields/Is_Probabilty_Won__c.field-meta.xml
<CustomField>
    <fullName>Is_Probabilty_Won__c</fullName>
    <description>100% Probability</description>
    <formula>Probability = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Probabilty Won</label>
    <type>Checkbox</type>
</CustomField>