unpackaged/main/default/objects/Opportunity/fields/Is_this_a_Non_Show__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Non_Show__c</fullName>
    <formula>if(isblank(Non_Show__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is this a Non-Show</label>
    <type>Text</type>
</CustomField>